k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musicgen
  labels:
    name: musicgen
    environment: production
